--- a/app/src/main/res/layout/activity_descripcion_restaurante.xml
+++ b/app/src/main/res/layout/activity_descripcion_restaurante.xml
@@ -59,12 +59,31 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textViewDescripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Actividad: "
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/textViewDescripcionText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
                     android:id="@+id/textViewDireccion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/label_direccion"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewDireccionText"
