--- a/app/src/main/res/layout/activity_lista_sugerir_lugar.xml
+++ b/app/src/main/res/layout/activity_lista_sugerir_lugar.xml
@@ -5,7 +5,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.hga.appturismo.activity.InsertarLugarActivity">
+tools:context="com.hga.appturismo.activity.ListaSugerirLugarActivity">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -17,7 +17,7 @@ tools:context="com.hga.appturismo.activity.InsertarLugarActivity">
     android:paddingTop="@dimen/padding_horizontal_fragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/lugarRecyclerView"
+        android:id="@+id/sugerirRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
