--- a/app/src/main/res/layout/content_button_sugerir_lugar.xml
+++ b/app/src/main/res/layout/content_button_sugerir_lugar.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="1"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"
+              android:weightSum="1">
 
     <Button
         android:id="@+id/buttonAceptarSugerencia"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:paddingRight="15dp"
-        android:text="Aceptar"
-        android:textAllCaps="false"
+        android:background="@color/colorPrimary"
+        android:padding="10dp"
+        android:layout_marginRight="5dp"
         android:drawableRight="@drawable/icono_aceptar"
-        android:background="@color/colorPrimary"/>
+        android:text="Aceptar"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/buttonRechazarSugerencia"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:paddingRight="15dp"
-        android:text="Rechazar"
-        android:textAllCaps="false"
+        android:background="@color/colorPrimary"
         android:drawableRight="@drawable/icono_rechazar"
-        android:background="@color/colorPrimary"/>
+        android:padding="10dp"
+        android:layout_marginLeft="5dp"
+        android:text="Rechazar"
+        android:textAllCaps="false"/>
 </LinearLayout>
