--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -28,7 +28,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:weightSum="3">
+                android:weightSum="3"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/label_textView_rolUser"
